<resources>
    <!-- Strings used for fragments for navigation -->
    <string name="app_name">Calculator</string>
    <string name="title_activity_bodhex">bodhex</string>
    <string name="Сlear">С</string>
    <string name="DIV">/</string>
    <string name="MUL">*</string>
    <string name="Backspace">⌫</string>
    <string name="SUB">-</string>
    <string name="ADD">+</string>
    <string name="Result">=</string>
    <string name="doth">.</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="ruble">₽</string>
    <string name="euro">€</string>
    <string name="dollar">$</string>
    <string name="pound">£</string>
    <string name="jaja">N</string>
    <string name="bitcoin">₿</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="numA">A</string>
    <string name="numB">B</string>
    <string name="numC">C</string>
    <string name="numD">D</string>
    <string name="numE">E</string>
    <string name="numF">F</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>