<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ready_grey"
    tools:context=".Converter">

    <LinearLayout
        android:id="@+id/viewPanel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/dark_grey"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/firstCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/neomorphism_blue"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/firstCurrencySelector"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/ruble"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/firstCurrencyTextView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="10"
                android:autoSizeTextType="uniform"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="35sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/binaryLinearLayout">

            <TextView
                android:id="@+id/secondCurrencySelector"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/dollar"
                android:textColor="@color/white"
                android:textSize="35sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/secondCurrencyTextView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="10"
                android:autoSizeTextType="uniform"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="35sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ready_grey"
        android:clipChildren="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPanel"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="40dp"
            android:divider="@drawable/width_divider_small"

            android:gravity="right"
            android:orientation="horizontal"
            android:showDividers="end|middle">

            <Button
                android:id="@+id/buttonClear"
                style="@style/Button.Gray.Text.Blue"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/Сlear"
                android:textSize="32sp" />

            <Button
                android:id="@+id/buttonBackspace"
                style="@style/Button.Gray.Text.Blue"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:text="@string/Backspace"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="40dp"
            android:divider="@drawable/width_divider_small"

            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/num7"
                style="@style/Button.ReadyGrey"
                android:layout_width="70dp"

                android:layout_height="70dp"
                android:text="@string/num7"

                android:textSize="32sp" />


            <Button
                android:id="@+id/num8"
                style="@style/Button.ReadyGrey"
                android:layout_width="70dp"

                android:layout_height="70dp"
                android:text="@string/num8"

                android:textSize="32sp" />

            <Button
                android:id="@+id/num9"
                style="@style/Button.ReadyGrey"
                android:layout_width="70dp"

                android:layout_height="70dp"
                android:text="@string/num9"

                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="40dp"
            android:divider="@drawable/width_divider_small"

            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/num4"
                style="@style/Button.ReadyGrey"
                android:layout_width="70dp"

                android:layout_height="70dp"

                android:text="@string/num4"
                android:textSize="32sp" />

            <Button
                android:id="@+id/num5"
                style="@style/Button.ReadyGrey"
                android:layout_width="70dp"

                android:layout_height="70dp"

                android:text="@string/num5"
                android:textSize="32sp" />

            <Button
                android:id="@+id/num6"
                style="@style/Button.ReadyGrey"
                android:layout_width="70dp"

                android:layout_height="70dp"

                android:text="@string/num6"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="40dp"
            android:divider="@drawable/width_divider_small"

            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/num1"
                style="@style/Button.ReadyGrey"
                android:layout_width="70dp"

                android:layout_height="70dp"

                android:text="@string/num1"
                android:textSize="32sp" />

            <Button
                android:id="@+id/num2"
                style="@style/Button.ReadyGrey"
                android:layout_width="70dp"

                android:layout_height="70dp"

                android:text="@string/num2"
                android:textSize="32sp" />

            <Button
                android:id="@+id/num3"
                style="@style/Button.ReadyGrey"
                android:layout_width="70dp"

                android:layout_height="70dp"

                android:text="@string/num3"
                android:textSize="32sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="40dp"
            android:divider="@drawable/width_divider_small"

            android:gravity="center"
            android:orientation="horizontal"
            android:showDividers="beginning|middle">

            <Button
                android:id="@+id/bt_change"

                style="@style/Button.ReadyGrey"
                android:layout_width="70dp"
                android:layout_height="70dp"

                android:text="❏"

                android:textSize="32sp" />

            <Button
                android:id="@+id/num0"
                style="@style/Button.ReadyGrey"
                android:layout_width="70dp"

                android:layout_height="70dp"

                android:text="@string/num0"
                android:textSize="32sp" />

            <Button
                android:id="@+id/dot"
                style="@style/Button.ReadyGrey"
                android:layout_width="70dp"

                android:layout_height="70dp"

                android:text="@string/doth"
                android:textSize="32sp" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>